trigger-dependency-injection/main/default/objects/TDI_HandlerMethod__mdt/TDI_HandlerMethod__mdt.object-meta.xml
<CustomObject>
    <description>Apex methods called by triggers (handlers, service managers...). Record a method as this custom metadata is necessary to relate a handler to the proper calling trigger.</description>
    <label>TDI - Handler Method</label>
    <pluralLabel>TDI - Handler Methods</pluralLabel>
</CustomObject>