trigger-dependency-injection/main/default/objects/TDI_HandlerMethod__mdt/fields/TDI_Active__c.field-meta.xml
<CustomField>
    <fullName>TDI_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>