trigger-dependency-injection/main/default/objects/TDI_HandlerMethod__mdt/fields/TDI_CallingTrigger__c.field-meta.xml
<CustomField>
    <fullName>TDI_CallingTrigger__c</fullName>
    <label>Calling Trigger</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>