trigger-dependency-injection/main/default/objects/TDI_HandlerMethod__mdt/fields/TDI_ClassName__c.field-meta.xml
<CustomField>
    <fullName>TDI_ClassName__c</fullName>
    <label>Class Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>