trigger-dependency-injection/main/default/objects/TDI_HandlerMethod__mdt/fields/TDI_Description__c.field-meta.xml
<CustomField>
    <fullName>TDI_Description__c</fullName>
    <inlineHelpText>Describe the functionality / user story corresponding to this method.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>