trigger-dependency-injection/main/default/objects/TDI_HandlerMethod__mdt/fields/TDI_IndexOfExecution__c.field-meta.xml
<CustomField>
    <fullName>TDI_IndexOfExecution__c</fullName>
    <inlineHelpText>Enter a number defining the order of execution of the method. A method with the index 1 will execute before a method with the index 2.</inlineHelpText>
    <label>Index of Execution</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>