trigger-dependency-injection/main/default/objects/TDI_HandlerMethod__mdt/fields/TDI_MethodName__c.field-meta.xml
<CustomField>
    <fullName>TDI_MethodName__c</fullName>
    <label>Method Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>