trigger-dependency-injection/main/default/objects/TDI_HandlerMethod__mdt/fields/TDI_Moment__c.field-meta.xml
<CustomField>
    <fullName>TDI_Moment__c</fullName>
    <label>Moment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>before</fullName>
                <default>true</default>
                <label>before</label>
            </value>
            <value>
                <fullName>after</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>