trigger-dependency-injection/main/default/objects/TDI_HandlerMethod__mdt/validationRules/TDI_NoUndeleteForBeforeTriggers.validationRule-meta.xml
<ValidationRule>
    <fullName>TDI_NoUndeleteForBeforeTriggers</fullName>
    <active>true</active>
    <description>Prevent setting &#39;undelete&#39; operation in &#39;after&#39; context.</description>
    <errorConditionFormula>ISPICKVAL(TDI_Moment__c, &#39;before&#39;) &amp;&amp; ISPICKVAL(TDI_Operation__c, &#39;undelete&#39;)</errorConditionFormula>
    <errorDisplayField>TDI_Operation__c</errorDisplayField>
    <errorMessage>&#39;undelete&#39; operation only works in &#39;after&#39; context.</errorMessage>
</ValidationRule>