trigger-dependency-injection/main/default/objects/TDI_HandlerMethod__mdt/listViews/TDI_Test.listView-meta.xml
<ListView>
    <fullName>TDI_Test</fullName>
    <columns>MasterLabel</columns>
    <columns>TDI_ClassName__c</columns>
    <columns>TDI_MethodName__c</columns>
    <columns>TDI_CallingTrigger__c</columns>
    <columns>TDI_Moment__c</columns>
    <columns>TDI_Operation__c</columns>
    <columns>TDI_Parameter1__c</columns>
    <columns>TDI_Parameter2__c</columns>
    <columns>TDI_IndexOfExecution__c</columns>
    <columns>TDI_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TDI_CallingTrigger__c</field>
        <operation>equals</operation>
        <value>Test</value>
    </filters>
    <label>TDI Test</label>
</ListView>